fix: philosophy paragraph spacing

--- a/src/styles/_philosophy.scss
+++ b/src/styles/_philosophy.scss
@@ -18,8 +18,7 @@
 }
 
 .post-video-row {
-  margin-top: rem(80px); //IE fallback
-  --space: 80px;
+  margin-top: rem(80px);
 }
 
 //---------------------------------------
